# productmind

./: .env.example  .gitignore  Claude.md  engineering-plan.txt  pyproject.toml
backend/: config.py
backend/agents/pm/prompts/: system.md
backend/api/: main.py
backend/api/middleware/: auth.py  budget.py
backend/db/: rls.py  session.py
backend/tests/: test_rls.py
backend/tools/: base.py  registry.py
frontend/: .env.local.example  package.json
supabase/: seed.sql
supabase/migrations/: 20260314000001_initial_schema.sql
